[package]
name = "cput-qa"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.20.1", features = ["train", "wgpu", "autodiff"] }
docx-rs = "0.4"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
zip = "0.6"  